--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Circle Drawing Game</title>
   <style>
     body {
@@ -24,10 +25,12 @@
   </style>
 </head>
 <body>
-  <h1>Draw a Circle Around the Point!</h1>
+  <div class="container-fluid">
+    <h1>Draw a Circle Around the Point!</h1>
+  </div>
   <canvas id="drawingCanvas" width="400" height="400"></canvas>
   <div class="button">
-    <button id="checkCircle">Check Circle</button>
+    <button id="checkCircle" class="btn btn-primary">Check Circle</button>
   </div>
   <p id="result"></p>
 
@@ -157,5 +160,6 @@
       calculateCircleAccuracy();
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
